[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/bats/bat_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Enemies/bats/Bat.gd" type="Script" id=2]
[ext_resource path="res://Enemies/bats/shoot.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Enemies/bats/projectile.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.9394

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Bat" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -38.547 ]
}
speed = 150.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.12132, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Bat_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 2
playing = true

[node name="shoot" type="Node2D" parent="."]
script = ExtResource( 3 )
projectile = ExtResource( 5 )

[node name="fp" type="Node2D" parent="shoot"]
position = Vector2( 64.4272, 0 )

[node name="icon" type="Sprite" parent="shoot/fp"]
scale = Vector2( 0.880614, 0.265016 )
texture = ExtResource( 4 )

[node name="attack_timer" type="Timer" parent="shoot"]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="shoot/attack_timer" to="shoot" method="_on_attack_timer_timeout"]
